tests/baselines/reference/selfRef.errors.txt
selfRef.ts(1,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
selfRef.ts(8,8): error TS2304: Cannot find name 'name'.
selfRef.ts(12,18): error TS2304: Cannot find name 'name'.


==== selfRef.ts (3 errors) ====
    module M
           ~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
    {
        export class Test
        {
          private name = "hello";
          public setName = function(value: string): void {
    	  (function () {
    	      name=value;
    	      ~~~~
!!! error TS2304: Cannot find name 'name'.
    	  })();
          }
          public getName = function(): string {
              return name;
                     ~~~~
!!! error TS2304: Cannot find name 'name'.
          }
        }
    }
    
    
    